[package]
name = "trauma"
version = "2.3.0"
edition = "2021"
license = "MIT"
description = "Simplify and prettify HTTP downloads"
homepage = "https://github.com/rgreinho/trauma"
repository = "https://github.com/rgreinho/trauma"
readme = "README.md"
categories = ["concurrency"]
keywords = ["http", "download", "async", "tokio", "indicatif"]

[dependencies]
form_urlencoded = "1.1.0"
futures = "0.3.25"
indicatif = "0.18.0"
reqwest = { version = "0.12.4", default-features = false, features = [
  "charset",
  "http2",
  "system-proxy",
  "stream",
  "socks",
] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.9.0"
reqwest-tracing = { version = "0.5.7", features = ["opentelemetry_0_22"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
color-eyre = "0.6.5"
comfy-table = "7.1.4"
console = "0.16.0"
opentelemetry = "0.31.0"
rand = "0.9.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
