[package]
name = "trauma"
version = "2.4.0"
edition = "2021"
license = "MIT"
description = "Simplify and prettify HTTP downloads"
homepage = "https://github.com/rgreinho/trauma"
repository = "https://github.com/rgreinho/trauma"
readme = "README.md"
categories = ["concurrency"]
keywords = ["http", "download", "async", "tokio", "indicatif"]

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = [
  "charset",
  "http2",
  "rustls",
  "system-proxy",
  "stream",
  "socks",
] }
form_urlencoded = "1.2.2"
futures = "0.3.32"
indicatif = "0.18.0"
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
reqwest-tracing = { version = "0.7.0", features = ["opentelemetry_0_22"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
color-eyre = "0.6.5"
comfy-table = "7.2.2"
console = "0.16.0"
opentelemetry = "0.31.0"
rand = "0.10.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls"]
