[package]
name = "trauma"
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "Simplify and prettify HTTP downloads"
homepage = "https://github.com/rgreinho/trauma"
repository = "https://github.com/rgreinho/trauma"
readme = "README.md"
categories = ["concurrency"]
keywords = ["http", "download", "async", "tokio", "indicatif"]

[dependencies]
reqwest = { version = "0.13.4", default-features = false, features = [
  "charset",
  "http2",
  "system-proxy",
  "stream",
  "socks",
] }
form_urlencoded = "1.2.2"
futures = "0.3.32"
indicatif = "0.18.0"
reqwest-middleware = "0.5.2"
reqwest-retry = "0.9.1"
reqwest-tracing = { version = "0.7.1", features = ["opentelemetry_0_22"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
bon = "3.9.3"

[dev-dependencies]
color-eyre = "0.6.5"
comfy-table = "7.2.2"
console = "0.16.3"
opentelemetry = "0.32.0"
rand = "0.10.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["rustls"]
rustls = ["reqwest/rustls"]
default-tls = ["reqwest/default-tls"]
